--- a/index.ipynb
+++ b/index.ipynb
@@ -220,7 +220,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -242,6 +244,26 @@
     "plt.xticks(xtick_locations, xtick_labels)\n",
     "\n",
     "plt.hist(x, bins=bins,  rwidth=0.25, density=True);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 1, 1, 1, 2, 2, 2, 2, 3, 3, 4, 5, 5]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x"
    ]
   },
   {
