Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -248,22 +248,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[1, 1, 1, 1, 2, 2, 2, 2, 3, 3, 4, 5, 5]"
+       "2.4615384615384617"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "x"
+    "np.array(x).mean()"
    ]
   },
   {
