Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -248,22 +248,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2.4615384615384617"
+       "1.940828402366864"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.array(x).mean()"
+    "np.array(x).var()"
    ]
   },
   {
